Version 3.1 0.06cvs 
2006-??-??

- Add ability to call debugger from program

- Add a better line tracing:
   * shows bash nesting, 
   * bash subshell nesting
   * function nesting
   * source line preserving initial indentation

- Add line tracing command-line option in bashdb: -X, and long option --trace

- add ability to turn on and off line tracing from inside a program

- Revise sample sessions in bashdb document

- Sourcing a command file now prints the 
  command before executing it.

- Executing a string (option -c or --command) shows the command
  to be run in the call stack.

- Attempt to get documentation on GNU Emacs section in order. Describe
  bashdbtrack.

Version 3.1 0.05 
2006-03-24

Version 3.1 0.05 
2006-03-24

- Add complete (command completion), 

- Add cd, pwd

- Add gdb-style set/show logging.

- Better checking to see if we have  bash 3.1 (as opposed to 3.0)

- GNU Emacs debugging improvements, including...

- Add shell prompt tracking in GNU Emacs (bashdbtrack - like 
  Python's pdbtrack)

- Patches to allow VPATH (or build outside of source tree)

- Numerous documentation changes

- Break out command files even more.

Version 3.1 0.04 (initial 3.1 release)
2006-01-16

- Showing which command on a line with multiple commmands works again.
  Reinstate regression tests which use that.

- Add a loadable routine to read a script into an array fast. This
  speeds up the startup on reading large scripts very much.

- Install compiled GNU emacs lisp

- We were reporting script line sizes as one larger than the actual size

- Bash location matches installation in bashdb documentation

Version 3.00 0.03 (bugfix and palindromic-version-number release)
2005-12-10

- Changes to make ddd work better 
  * "info args" works correctly 
  * "help run" works
  * Do all the directory removing/creating/symbolic linking so that bash
    finds the include file it needs. This was real ugly. I couldn't have