@@ -1,0 +1,11 @@
+# Debugger test of 'command' command
+#
+# Try to set command when there is no.
+command 1
+break 23
+command 1
+x x
+end
+continue 24
+quit
+
