@@ -1,0 +1,26 @@
+#!/bin/sh
+#$Id: run-command,v 1.1 2006/06/11 02:23:32 rockyb Exp $
+
+if test -z "$srcdir"  ; then
+  srcdir=`pwd`
+fi
+
+if test -z "$builddir"  ; then
+  builddir=`pwd`
+fi
+
+. ${builddir}/check_common
+
+TEST_NAME='command'
+TEST_FILE="$builddir/${TEST_NAME}.check"
+(cd $srcdir && ${THIS_SH} ${TEST_NAME}.tests > $TEST_FILE 2>&1 < /dev/null)
+
+check_output $TEST_FILE ${srcdir}/${TEST_NAME}.right
+
+# Return code tells testing mechanism whether passed or not.
+exit $?
+
+#;;; Local Variables: ***
+#;;; mode:shell-script ***
+#;;; eval: (sh-set-shell "bash") ***
+#;;; End: ***
