@@ -1,6 +1,9 @@
 Version 3.1 0.06cvs 
 2006-??-??
 
+- Add gdb 'commands' command: 
+    runs debugger commands at a specified breakpoint
+
 - Add ability to call debugger from program
 
 - Add a better line tracing:
@@ -529,4 +532,4 @@ occurred on line 1.) Also support for call stacks with source files
 and line numbers can be helpful for stand-alone debugging and error
 reporting
 
-$Id: NEWS,v 1.9 2006/04/10 02:50:27 rockyb Exp $
+$Id: NEWS,v 1.10 2006/06/11 02:23:32 rockyb Exp $
